<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/input1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:hint="@string/fieldAmount"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/from"
        android:autofillHints="amount" />

    <TextView
        android:id="@+id/to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginBottom="44dp"
        android:text="@string/textTo"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/input2"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/from"
        android:layout_width="48dp"
        android:layout_height="25dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="168dp"
        android:layout_marginEnd="334dp"
        android:text="@string/textFrom"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/rg2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="188dp"
        android:layout_marginEnd="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/eur1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textFirstRadioButton"
            android:textSize="14sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/bitcoins1"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/textSecondRadioButton"
            android:textSize="14sp"
            android:textStyle="bold" />

    </RadioGroup>

    <RadioGroup
        android:id="@+id/rg1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="76dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <RadioButton
            android:id="@+id/eur2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textFirstRadioButton"
            android:textSize="14sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/bitcoins2"
            android:layout_width="69dp"
            android:layout_height="wrap_content"
            android:text="@string/textSecondRadioButton"
            android:textSize="14sp"
            android:textStyle="bold" />

    </RadioGroup>

    <Button
        android:id="@+id/convert"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="133dp"
        android:layout_height="83dp"
        android:text="@string/btnConvert"
        android:textAlignment="center"
        android:textColor="#151515"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.584" />

    <EditText
        android:id="@+id/input2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="76dp"
        android:autofillHints="result"
        android:ems="10"
        android:inputType="textShortMessage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="190dp"
        android:layout_height="187dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/descriptionLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />


</androidx.constraintlayout.widget.ConstraintLayout>